gcc/testsuite/g++.dg/cpp1z/class-deduction75.C
@@ -1,0 +1,15 @@
+// PR c++/97663
+
+template <class T> struct foo {};
+template <class T> struct bar {};
+template <class T> struct baz {};
+template <class T> struct qux {};
+template <class T> struct corge {};
+
+namespace N {
+  unsigned foo ();
+  signed bar ();
+  long baz ();
+  long long qux ();
+  short corge (); 
+}
